* Jan 10 2001 hship

Update for log4j 1.0.

* Jan 9 2001 hship

Integrate David Solis' changes for WML support.

* Jan 9 2001 hship

Package reorg madness.
Updated copyrights and Primix name and address.
Renamed ImageButton to ImageSubmit.
Remove DatabaseQuery and InsertURL components.

* Jan 8 2001 hship

Begin adding log4j support.
Add a Logging page to the Tapestry Inspector.
Add logging support to ApplicationServlet.
Added buttons for restarting and resetting to the Engine view of the Inspector.
Add method IEngine.isDebugServiceEnabled().
Change the EJBObject <--> Handle swap to be during serialization, not normal storage.

* Jan 4 2001 hship

Optimize PropertyBindings, simplifying property paths when possible.
Make StringSplitter recognize when a string cannot be split.
Reorganize the Inspector a bit.

* Jan 4 2001 hship

[127536] Class load error for .wars 

* Jan 3 2001 hship

Restore IEngine.setVisit() method.

* Jan 3 2001 hship

Rename InternalAsset to ContextAsset, and <internal-asset> to <context-asset>.
Implement localization for ContextAsset and PrivateAsset.
Have the PageSource cache instance of ExternalAsset, PrivateAsset and ContextAsset.
check in some missing files from the Savage Refactoring (woops!).
[112110] Tracking bug: Finish Localization Support 

* Jan 2 2001 hship

Split the index for Tapestry.
Add setLocale() to IEngine.
Implement HTML template localization.
Make a couple of protected variables private in BasePage.

* Dec 29 2000 hship

Savage Refactoring!
IApplication -> IEngine, com.primix.tapestry.app -> com.primix.tapestry.engine
Fix many out of date Javadoc comments.
Improve exception handling/reporting in ApplicationServlet.
Add the engineClassName property to the ApplicationSpecification, update the DTD and
the SpecificationParser.
Have the ApplicationServlet construct the engine from the class name.

* Dec 28 2000 hship

Woops!  Moved the logic for creating the visit object to AbstractApplication.

* Dec 28 2000 hship
